homepage and styling changes
Created the home page and added pictures. Changes made to the styling of text. renamed unpage to UN sustainability.

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>About Page</title>
     <link
@@ -33,7 +33,7 @@
         <a class="nav-link" href="education.html">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="unpage.html">Unpage</a>
+        <a class="nav-link" href="unpage.html">UN Sustainability</a>
       </li>
     </ul>
 
