--- a/unpage.html
+++ b/unpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Policies Page</title>
     <link
@@ -34,7 +34,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="unpage.html"
-          >Unpage</a
+          >UN Sustainability</a
         >
       </li>
     </ul>
