--- a/home.html
+++ b/home.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Home Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,9 +12,18 @@
     />
     <link rel="stylesheet" href="css/home.css" />
     <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <!-- Nav bar -->
@@ -33,7 +44,7 @@
         <a class="nav-link" href="education.html">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="unpage.html">Unpage</a>
+        <a class="nav-link" href="unpage.html">UN Sustainability</a>
       </li>
     </ul>
 
@@ -43,23 +54,215 @@
         <div class="row">
           <div class="col-lg-7 mx-auto">
             <h1 class="display-4 text-white">
-              Turkey's comprehensive plan to combat climate change.
+              Turkey's disastrous February 6, 2023 earthquake
             </h1>
             <p class="text-white my-3">
-              Find out how Türkiye (Turkey) plans on meeting their United
-              Nations (UN) Sustainability Goal.
+              Explore how the catastrophic earthquake that claimed over 44,000
+              lives pressures Turkish engineers to align their constructions
+              with the UN's Sustainable Development Goal 11 for safer, resilient
+              cities.
             </p>
-            <a href="#nation" class="btn mr-3 btn-primary">Learn More</a>
-            <a href="map.html" class="btn btn-outline-light"
-              >Where is Turkey?</a
+            <a href="#goal" class="btn mr-3 btn-primary">Learn More</a>
+            <a
+              href="https://www.google.com/maps/place/T%C3%BCrkiye/@38.005033,32.0201984,6z/data=!4m6!3m5!1s0x14b0155c964f2671:0x40d9dbd42a625f2a!8m2!3d38.963745!4d35.243322!16zL20vMDF6bmNf?entry=ttu"
+              class="btn btn-outline-light"
+              target="_blank"
             >
+              Where is Turkey?
+            </a>
+            <a href="#footer" class="btn btn-outline-light">Donate Here!</a>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- website goals -->
+    <div id="goal">
+      <img src="images/TurkishFlag.jpg" alt="The flag of Turkey." />
+      <p id="caption">Flag of Turkey</p>
+      <br />
+      <p>
+        Turkey is known for its rich cultural heritage and its stunning<br />
+        landscapes. Despite its many strengths, the country faced a profound
+        <br />
+        challenge on February 6, 2023, when a severe earthquake brought <br />
+        significant devastation and highlighted vulnerabilities in building
+        <br />
+        safety standards. Our mission is to raise awareness about the impacts of
+        <br />
+        this disaster and advocate for enhanced building regulations and safety
+        <br />
+        measures. By promoting a deeper understanding of these issues, we aim
+        to<br />
+        contribute to Turkey's resilience and ensure a safer future for its
+        <br />
+        communities.
+      </p>
+    </div>
+
+    <!-- Carousel -->
+    <div id="reason">
+      <h1
+        style="
+          text-align: center;
+          font-weight: bold;
+          text-decoration: underline;
+          font-family: 'Roboto Condensed', sans-serif;
+        "
+      >
+        Why Turkey is Important?
+      </h1>
+      <br />
+      <div id="carouselExampleCaptions" class="carousel slide carousel-custom">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="4"
+            aria-label="Slide 5"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="images/turkishCulture.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Culture</h5>
+              <p>
+                Turkey is culturally significant, holding a rich history that
+                combines elements from various civilizations such as the
+                Byzantine, Ottoman, and Hittite.
+              </p>
+              <br />
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/turkishMosque.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Religion</h5>
+              <p>
+                Turkey's historical religious landscape showcases its role as a
+                crossroads of faiths. Iconic Istanbul structures like the Hagia
+                Sophia and the Blue Mosque, along with its title as the "land of
+                thousands of mosques," highlight its deep Islamic heritage.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/TurkishTourists.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Tourism</h5>
+              <p>
+                Turkey's blend of Eastern and Western influences makes it a
+                culturally appealing destination for a wide range of travelers,
+                increasing its popularity as a tourism hotspot.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/TurkishFood.jpg" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Culinary</h5>
+              <p>
+                Turkish cuisine features a rich mix of flavors, ingredients, and
+                techniques, drawing from Ottoman, Middle Eastern, Central Asian,
+                and Mediterranean culinary traditions.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/TurkishCastle.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>History</h5>
+              <p>
+                Turkey's historical depth is marked by its role as a starting
+                place for major civilizations. It has been home to the Hittites,
+                Phrygians, Urartians, Greeks, Romans, Byzantines, and Ottomans,
+                each enriching its diverse historical past.
+              </p>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div id="overview">
+      <h1
+      style="
+        text-align: center;
+        font-weight: bold;
+        text-decoration: underline;
+        font-family: 'Roboto Condensed', sans-serif;
+      "
+    >At a Quick Glance</h1>
+    </div>
+
     <!-- Footer -->
     <footer
+      id="footer"
       class="text-center text-lg-start text-dark"
       style="background-color: #eceff1"
     >
