--- a/home.html
+++ b/home.html
@@ -70,6 +70,7 @@
             >
               Where is Turkey?
             </a>
+            <a href="#earthquake" class="btn btn-outline-light">Why do Earthquakes Happen?</a>
             <a href="#footer" class="btn btn-outline-light">Donate Here!</a>
           </div>
         </div>
@@ -250,26 +251,173 @@
     <br />
 
     <div id="overview">
-      <h1>At a Quick Glance</h1>
       <div class="overview-flex">
-          <div>
-              <img src="images/earthquakeMap.png" alt="The flag of Turkey." class="overview-img" />
-              <p style="text-align: center;">Click to Enlarge!</p>
-          </div>
-          <div class="overview-text">
-              <p>
-                  With a magnitude of 7.8 and 7.5, two earthquakes hit Turkey and parts of
-                  Syria on February 6, 2023. It killed over 50,000 people and damaged
-                  hundreds of thousands of buildings. This displaced millions of families
-                  and generated billions of dollars in damages. A full recovery is
-                  expected to take several years as many people are still living in
-                  temporary shelters or remain homeless. Efforts to rehabilitate are
-                  limited to struggles with inflation throughout the country.
-              </p>
-          </div>
+        <div>
+          <img
+            src="images/earthquakeMap.png"
+            alt="map of the earthquake in Turkey/Syria"
+            class="overview-img"
+          />
+          <p style="text-align: center">Click to Enlarge!</p>
+        </div>
+        <div class="overview-text">
+          <h1>At a Quick Glance</h1>
+          <p>
+            With a magnitude of 7.8 and 7.5, two earthquakes hit Turkey and
+            parts of Syria on February 6, 2023. It killed over 50,000 people and
+            damaged hundreds of thousands of buildings. This displaced millions
+            of families and generated billions of dollars in damages. A full
+            recovery is expected to take several years as many people are still
+            living in temporary shelters or remain homeless. Efforts to
+            rehabilitate are limited to struggles with inflation throughout the
+            country.
+          </p>
+        </div>
       </div>
-  </div>
-  
+      <div class="overview-flex">
+        <div id="earthquake">
+          <img
+            src="images/earthquakes.jpg"
+            alt="Example of an earthquake"
+            class="overview-img"
+          />
+          <p style="text-align: center">Click to Enlarge!</p>
+        </div>
+        <div class="overview-text">
+          <h1>Why do Earthquakes Happen?</h1>
+          <div class="accordion" id="accordionPanelsStayOpenExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseOne"
+                  aria-expanded="true"
+                  aria-controls="panelsStayOpen-collapseOne"
+                >
+                  Earthquake Triggers
+                </button>
+              </h2>
+              <div
+                id="panelsStayOpen-collapseOne"
+                class="accordion-collapse collapse show"
+              >
+                <div class="accordion-body">
+                  Earthquakes happen when the Earth's surface shakes due to
+                  movements deep underground. These movements come from the
+                  edges of large pieces of the Earth's outer shell, which fit
+                  together like a giant jigsaw puzzle but are always slowly
+                  moving.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseTwo"
+                >
+                  Colliding and Sliding Plates
+                </button>
+              </h2>
+              <div
+                id="panelsStayOpen-collapseTwo"
+                class="accordion-collapse collapse"
+              >
+                <div class="accordion-body">
+                  The ground shakes mostly because these pieces, called tectonic
+                  plates, either crash into each other, pull apart, or scrape
+                  against one another. When they lock together but continue to
+                  push, tension builds up. Once the force becomes too much to
+                  hold, it releases suddenly, causing the ground to tremble.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseThree"
+                >
+                  Earth's Surface Features
+                </button>
+              </h2>
+              <div
+                id="panelsStayOpen-collapseThree"
+                class="accordion-collapse collapse"
+              >
+                <div class="accordion-body">
+                  In some places, one plate slides beneath another, a process
+                  called subduction, which can create powerful quakes. In other
+                  areas, plates move apart, especially at the ocean floor, where
+                  new land can form. This pulling apart can also lead to quakes.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseFour"
+                  aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseFour"
+                >
+                  Human Impact
+                </button>
+              </h2>
+              <div
+                id="panelsStayOpen-collapseFour"
+                class="accordion-collapse collapse"
+              >
+                <div class="accordion-body">
+                  Interestingly, humans can also cause earthquakes through
+                  activities like mining, filling large reservoirs with water,
+                  and extracting geothermal energy. These activities might
+                  disturb the balance underground, leading to tremors.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseFive"
+                  aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseFive"
+                >
+                  Associated with Volcanoes
+                </button>
+              </h2>
+              <div
+                id="panelsStayOpen-collapseFive"
+                class="accordion-collapse collapse"
+              >
+                <div class="accordion-body">
+                  Apart from the movement of plates, earthquakes can also happen
+                  due to volcanic activity. When magma (molten rock) moves
+                  beneath the Earth's surface, it can push against the rock,
+                  causing vibrations that we feel as earthquakes.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <footer
       id="footer"
