--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>About Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -9,10 +11,19 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href='css/about.css'>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/about.css" />
   </head>
   <body>
     <!-- Nav bar -->
@@ -21,7 +32,9 @@
         <a class="nav-link" href="home.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="about.html">About</a>
+        <a class="nav-link active" aria-current="page" href="about.html"
+          >About</a
+        >
       </li>
       <li class="nav-item">
         <a class="nav-link" href="impact.html">Impact</a>
@@ -37,10 +50,239 @@
       </li>
     </ul>
 
-    <p>about page works!</p>
+    <!-- Hero div -->
+    <div class="hero vh-100 d-flex align-items-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 mx-auto">
+            <h1 class="display-4 text-white">
+              2023 Turkey Earthquake: A Closer Look at the Tragedy and Lessons
+              Learned
+            </h1>
+            <p class="text-white my-3" style="font-size: 22px">
+              Continue reading to explore why the devastating 2023 earthquake in
+              Turkey resulted in numerous casualties and incurred billions in
+              damages, many of which could have been mitigated with better
+              preparedness and infrastructure.
+            </p>
+            <a href="#intro" class="btn mr-3 btn-primary">Learn More</a>
+            <a href="#footer" class="btn btn-outline-light">Donate Here!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Introduction Section -->
+    <div id="intro">
+      <div style="display: flex; align-items: center">
+        <div style="flex: 1">
+          <!-- Carousel -->
+          <div
+            id="carouselExample"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="images/destoriedBuilding.jpg"
+                  class="d-block w-100"
+                  alt="Ruins of a building post-earthquake"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/destoriedBuilding2.jpg"
+                  class="d-block w-100"
+                  alt="Description of your second image"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/destoriedBuilding3.jpg"
+                  class="d-block w-100"
+                  alt="Description of your third image"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/destoriedBuilding4.jpg"
+                  class="d-block w-100"
+                  alt="Description of your fourth image"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- End of Carousel -->
+        </div>
+        <div id="textIntro" style="flex: 1">
+          <h1>Understanding the 2023 Turkey Earthquake</h1>
+          <p>
+            On February 6, 2023, Turkey was hit by a devastating earthquake that
+            not only shook the nation but also captured global attention due to
+            its severe impacts and tragic aftermath. This disaster,
+            characterized by its high magnitude and deep geological impact,
+            claimed thousands of lives and caused extensive damage to
+            infrastructure, homes, and historical sites across several regions.
+          </p>
+          <p>
+            The earthquake hit in the early hours, lasting 85 seconds, but its
+            repercussions are still felt today. It was followed by over 570
+            aftershocks, including a significant 7.5 magnitude temblor,
+            complicating rescue efforts and increasing the urgency for
+            international aid. This page aims to delve into the reasons behind
+            the extensive damage and the lessons we can learn to better prepare
+            for future natural disasters.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Construction Practices and Building Codes Section -->
+    <div class="container mt-4 unique-section">
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <h2 class="section-title" style="font-weight: bold">
+            Construction Practices and Historical Building Codes
+          </h2>
+          <p class="section-text" style="font-size: 21px">
+            In Turkey, particularly for buildings exceeding three stories, a
+            common construction method involves reinforced concrete frameworks,
+            as noted by Stewart, an expert in earthquake engineering.
+            "Typically, the columns and beams are of concrete," Stewart
+            explains. "And then there's kind of a masonry infill block inside
+            these frames, which falls apart very quickly when the shaking
+            begins." This observation is supported by Abbie Liel, an engineer
+            and professor at the University of Colorado Boulder, who has
+            analyzed photos of the destruction and sees a clear pattern.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/earthquakeresistance.jpg"
+            alt="Turkish Construction Techniques"
+            class="img-fluid mb-3 section-image float-right"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/buildingCodes.jpg"
+            alt="Evolution of Building Codes in Turkey"
+            class="img-fluid mb-3 section-image float-left"
+          />
+        </div>
+        <div class="col-md-6">
+          <p class="section-text" style="font-size: 21px">
+            Post the devastating 1999 earthquake near Izmit, Turkey
+            significantly revised its building codes to enhance seismic
+            resilience. These regulations are robust, yet many existing
+            structures predate these standards. The enforcement of these updated
+            codes has faced challenges, exacerbated by rapid urban development
+            and occasional lapses in regulatory oversight, leading to
+            inconsistencies in building safety.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Issues with Building Codes and Enforcement Section -->
+    <div style="overflow: auto">
+      <img
+        src="images/enforement.jpg"
+        alt="Challenges in Building Code Enforcement"
+        style="float: left; margin-right: 20px; width: 900px"
+      />
+      <h2 style="font-size: 40px; font-weight: bold">
+        Building Code Enforcement and Its Challenges
+      </h2>
+      <p style="font-size: 25px">
+        Although Turkey strengthened its building codes following the
+        devastating 1999 Istanbul earthquake, experts argue that poor enforcement
+        and inadequate planning have worsened the effects of subsequent
+        earthquakes. Many buildings, constructed before these newer codes were
+        enacted, were not sufficiently upgraded or maintained to withstand
+        significant seismic activity.
+      </p>
+      <p style="font-size: 25px">
+        The use of substandard building materials and the lack of proper
+        inspections during construction booms have been significant factors.
+        These lapses in enforcement and oversight have resulted in structures
+        that fail to meet safety standards, thereby intensifying the damage and
+        increasing the risk to human life during earthquakes.
+      </p>
+      <p style="font-size: 25px">
+        Addressing these challenges requires a concerted effort to not only
+        update building codes but also to ensure strict compliance through
+        regular inspections and penalties for non-compliance. Improving the
+        overall structural integrity of buildings is essential for reducing the
+        potential impacts of future earthquakes.
+      </p>
+      <div style="clear: both"></div>
+    </div>
+
+    <!-- Advanced Construction Techniques Section -->
+    <div class="container mt-4">
+      <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
+        Innovative Construction Techniques for Earthquake Resistance
+      </h2>
+      <p style="font-size: 25px">
+        Modern construction technologies designed for earthquake resistance
+        provide significant benefits by protecting structures from severe damage
+        and reducing repair costs. Two of the best and most effective techniques include
+        steel-reinforced concrete and floating foundations for buiildings.
+      </p>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/SteelConcrete.jpg"
+            alt="Diagram of Steel-Reinforced Concrete"
+            class="img-fluid mb-3"
+          />
+          <br>
+          <br>
+          <br>
+          <p class="text-center"><strong>Steel-Reinforced Concrete</strong></p>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/FloatingSystem.jpg"
+            alt="Model of Floating Foundation"
+            class="img-fluid mb-3"
+          />
+          <p class="text-center"><strong>Floating Foundation System</strong></p>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer -->
     <footer
+      id="footer"
       class="text-center text-lg-start text-dark"
       style="background-color: #eceff1"
     >
@@ -165,5 +407,7 @@
       </div>
       <!-- Copyright -->
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/home.js"></script>
   </body>
 </html>
