--- a/about.html
+++ b/about.html
@@ -56,14 +56,13 @@
         <div class="row">
           <div class="col-lg-7 mx-auto">
             <h1 class="display-4 text-white">
-              2023 Turkey Earthquake: A Closer Look at the Tragedy and Lessons
-              Learned
+              Unveiling the Impact: The 2023 Turkey Earthquake
             </h1>
             <p class="text-white my-3" style="font-size: 22px">
-              Continue reading to explore why the devastating 2023 earthquake in
-              Turkey resulted in numerous casualties and incurred billions in
-              damages, many of which could have been mitigated with better
-              preparedness and infrastructure.
+              Dive into an in-depth analysis of how the 2023 earthquake has
+              reshaped lives and landscapes, revealing the immense human,
+              economic, and environmental toll. Discover stories of resilience
+              and the challenges of rebuilding.
             </p>
             <a href="#intro" class="btn mr-3 btn-primary">Learn More</a>
             <a href="#footer" class="btn btn-outline-light">Donate Here!</a>
@@ -166,10 +165,10 @@
     <div class="container mt-4 unique-section">
       <div class="row">
         <div class="col-md-6 mb-3">
-          <h2 class="section-title" style="font-weight: bold">
+          <h2 class="section-title" style="font-size: 35px; font-weight: bold">
             Construction Practices and Historical Building Codes
           </h2>
-          <p class="section-text" style="font-size: 21px">
+          <p class="section-text" style="font-size: 25px">
             In Turkey, particularly for buildings exceeding three stories, a
             common construction method involves reinforced concrete frameworks,
             as noted by Stewart, an expert in earthquake engineering.
@@ -198,7 +197,7 @@
           />
         </div>
         <div class="col-md-6">
-          <p class="section-text" style="font-size: 21px">
+          <p class="section-text" style="font-size: 25px">
             Post the devastating 1999 earthquake near Izmit, Turkey
             significantly revised its building codes to enhance seismic
             resilience. These regulations are robust, yet many existing
@@ -223,11 +222,11 @@
       </h2>
       <p style="font-size: 25px">
         Although Turkey strengthened its building codes following the
-        devastating 1999 Istanbul earthquake, experts argue that poor enforcement
-        and inadequate planning have worsened the effects of subsequent
-        earthquakes. Many buildings, constructed before these newer codes were
-        enacted, were not sufficiently upgraded or maintained to withstand
-        significant seismic activity.
+        devastating 1999 Istanbul earthquake, experts argue that poor
+        enforcement and inadequate planning have worsened the effects of
+        subsequent earthquakes. Many buildings, constructed before these newer
+        codes were enacted, were not sufficiently upgraded or maintained to
+        withstand significant seismic activity.
       </p>
       <p style="font-size: 25px">
         The use of substandard building materials and the lack of proper
@@ -254,8 +253,9 @@
       <p style="font-size: 25px">
         Modern construction technologies designed for earthquake resistance
         provide significant benefits by protecting structures from severe damage
-        and reducing repair costs. Two of the best and most effective techniques include
-        steel-reinforced concrete and floating foundations for buiildings.
+        and reducing repair costs. Two of the best and most effective techniques
+        include steel-reinforced concrete and floating foundations for
+        buiildings.
       </p>
       <div class="row">
         <div class="col-md-6">
@@ -264,9 +264,9 @@
             alt="Diagram of Steel-Reinforced Concrete"
             class="img-fluid mb-3"
           />
-          <br>
-          <br>
-          <br>
+          <br />
+          <br />
+          <br />
           <p class="text-center"><strong>Steel-Reinforced Concrete</strong></p>
         </div>
         <div class="col-md-6">
