--- a/impact.html
+++ b/impact.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Impact Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -9,10 +11,19 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href='css/impact.css'>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/impact.css" />
   </head>
   <body>
     <!-- Nav bar -->
@@ -39,10 +50,223 @@
       </li>
     </ul>
 
-    <p>impact page works!</p>
+    <!-- Hero div -->
+    <div class="hero vh-100 d-flex align-items-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 mx-auto">
+            <h1 class="display-4 text-white">
+              The Devastating Impact of the 2023 Turkey Earthquake
+            </h1>
+            <p class="text-white my-3" style="font-size: 22px">
+              Continue reading to explore why the devastating 2023 earthquake in
+              Turkey resulted in numerous casualties and incurred billions in
+              damages, many of which could have been mitigated with better
+              preparedness and infrastructure.
+            </p>
+            <a href="#intro" class="btn mr-3 btn-primary">Learn More</a>
+            <a href="#footer" class="btn btn-outline-light">Donate Here!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Introduction Section -->
+    <div id="intro">
+      <div style="display: flex; align-items: center">
+        <div style="flex: 1">
+          <!-- Carousel -->
+          <div
+            id="carouselExample"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="images/Impact1.jpg"
+                  class="d-block w-100"
+                  alt="Ruins of a building post-earthquake"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/Impact2.jpg"
+                  class="d-block w-100"
+                  alt="Description of your second image"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/Impact3.jpg"
+                  class="d-block w-100"
+                  alt="Description of your third image"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/Impact4.jpg"
+                  class="d-block w-100"
+                  alt="Description of your fourth image"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- End of Carousel -->
+        </div>
+        <div id="textIntro" style="flex: 1">
+          <h1>Immediate Aftermath of the 2023 Turkey Earthquake</h1>
+          <p>
+            The 2023 earthquake in Turkey was a seismic event of unprecedented
+            scale, impacting millions and exposing the critical need for urban
+            planning and disaster readiness. The quake not only shattered lives
+            but also infrastructure, leaving a lasting imprint on the region's
+            landscape and its people's hearts.
+          </p>
+          <p>
+            The initial hours following the earthquake were marked by chaos and
+            confusion as emergency services scrambled to respond amidst the
+            widespread devastation. With many areas rendered inaccessible due to
+            debris and damaged infrastructure, the race against time to rescue
+            trapped survivors was fraught with difficulties. The community's
+            resilience was tested as thousands of volunteers joined professional
+            rescue teams, braving aftershocks and harsh conditions to search for
+            signs of life beneath the rubble. This collective effort underscored
+            the spirit of unity and the critical importance of timely and
+            coordinated disaster response strategies.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Construction Practices and Building Codes Section -->
+    <div class="container mt-4 unique-section">
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <h2 class="section-title" style="font-weight: bold">
+            Impact on the communities
+          </h2>
+          <p class="section-text" style="font-size: 21px">
+            Burak: His home collapsed and buried him and his family under the
+            debris, leaving them to the streets in bitter cold temperatures. He
+            lost ten people in his family including a two-month-old baby. They
+            were unable to escape after being buried shortly after the
+            earthquake began. Burak spent more than an hour digging his way out
+            until he could finally help his other family members out of the
+            wreckage. Burak continued to help search for others and witnessed
+            many who lost their lives. He was able to send his sister to other
+            family relatives; however, his parents struggled to leave their
+            beloved city of Adiyaman. He hopes to return to his job as a mariner
+            to gather enough funds to rent, or perhaps one day even buy a new
+            home.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/Burak.jpg"
+            alt="Turkish Construction Techniques"
+            class="img-fluid mb-3 section-image float-right"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/Irmine.jpg"
+            alt="Evolution of Building Codes in Turkey"
+            class="img-fluid mb-3 section-image float-left"
+          />
+        </div>
+        <div class="col-md-6">
+          <p class="section-text" style="font-size: 21px">
+            Irmine [3rd from right]: Following the destruction of her home, this
+            family has taken shelter in a center in Sanliurfa with access to
+            food, water, heating, and other supplies. The earthquake instilled
+            fear and trauma across thousands, making people weary of entering
+            any concrete buildings. Irmine and her family felt safe at this
+            center because of its internal steel structure. She occupies this
+            space with thousands of others to avoid the cold conditions outside.
+            They feel lucky for the basic necessities they currently have as
+            many citizens are in far worse conditions. Irmine does not know how
+            long they will stay here, but she knows it cannot last forever. This
+            is currently their best option.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div style="overflow: auto">
+      <img
+        src="images/TurkeyPresident.jpg"
+        alt="Challenges in Building Code Enforcement"
+        style="float: left; margin-right: 20px; width: 900px"
+      />
+      <h2 style="font-size: 40px; font-weight: bold">President's Promise</h2>
+      <p style="font-size: 25px">
+        Recep Tayyip Erdoğan, the current president of Turkey since 2014,
+        promised to “rebuild these buildings within one year and will hand them
+        back to citizens.” He vowed to construct 650,000 new homes with 319,000
+        homes built within the first year and another 331,000 in the year after.
+        Building efforts are slow, and this promise remains unfulfilled a year
+        after the earthquake took place. Erdoğan’s promises are difficult to see
+        as attainable by many amidst Turkey’s complicated economic challenges
+        such as increasing inflation and cost of materials needed for
+        infrastructure.
+      </p>
+      <div style="clear: both"></div>
+    </div>
+
+    <div class="container mt-4">
+      <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
+        Balancing Act: The Environmental Challenges of Rapid Reconstruction Efforts
+      </h2>
+      <p style="font-size: 25px">
+        Reconstruction efforts that are this rapid can pose many risks such as
+        increased carbon emissions, poor air quality, loss of biodiversity,
+        inefficient land use, increased use of energy, and limited access to
+        public spaces.
+      </p>
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+          <img
+            src="images/RemovingDebris.jpg"
+            alt="Diagram of Steel-Reinforced Concrete"
+            class="img-fluid mb-3 mx-auto d-block"
+          />
+          <p><strong> Workers removing debris</strong></p>
+        </div>
+      </div>
+    </div>
+    
+    
 
     <!-- Footer -->
     <footer
+      id="footer"
       class="text-center text-lg-start text-dark"
       style="background-color: #eceff1"
     >
