--- a/about.html
+++ b/about.html
@@ -93,21 +93,21 @@
                 <img
                   src="images/destoriedBuilding2.jpg"
                   class="d-block w-100"
-                  alt="Description of your second image"
+                  alt="Ruins of a building post-earthquake"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="images/destoriedBuilding3.jpg"
                   class="d-block w-100"
-                  alt="Description of your third image"
+                  alt="Ruins of a building post-earthquake"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="images/destoriedBuilding4.jpg"
                   class="d-block w-100"
-                  alt="Description of your fourth image"
+                  alt="Ruins of a building post-earthquake"
                 />
               </div>
             </div>
@@ -210,7 +210,7 @@
       </div>
     </div>
 
-    <!-- Issues with Building Codes and Enforcement Section -->
+    <!-- Building code enforcement challenge section -->
     <div style="overflow: auto">
       <img
         src="images/enforement.jpg"
