--- a/impact.html
+++ b/impact.html
@@ -86,28 +86,28 @@
                 <img
                   src="images/Impact1.jpg"
                   class="d-block w-100"
-                  alt="Ruins of a building post-earthquake"
+                  alt="Temporary shelter"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="images/Impact2.jpg"
                   class="d-block w-100"
-                  alt="Description of your second image"
+                  alt="removing ruins of a building post-earthquake"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="images/Impact3.jpg"
                   class="d-block w-100"
-                  alt="Description of your third image"
+                  alt="man standing in front of ruins of a building post-earthquake"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="images/Impact4.jpg"
                   class="d-block w-100"
-                  alt="Description of your fourth image"
+                  alt="Man and women standing on ruins of a building"
                 />
               </div>
             </div>
@@ -163,12 +163,12 @@
       </div>
     </div>
 
-    <!-- Construction Practices and Building Codes Section -->
+    <!-- Community impact -->
     <div class="container mt-4 unique-section">
       <div class="row">
         <div class="col-md-6 mb-3">
           <h2 class="section-title" style="font-weight: bold">
-            Impact on the communities
+            Impact on the Communities
           </h2>
           <p class="section-text" style="font-size: 21px">
             Burak: His home collapsed and buried him and his family under the
@@ -188,7 +188,7 @@
         <div class="col-md-6">
           <img
             src="images/Burak.jpg"
-            alt="Turkish Construction Techniques"
+            alt="Burak standing outside of his home."
             class="img-fluid mb-3 section-image float-right"
           />
         </div>
@@ -197,7 +197,7 @@
         <div class="col-md-6">
           <img
             src="images/Irmine.jpg"
-            alt="Evolution of Building Codes in Turkey"
+            alt="Irmine with her family in a shelter"
             class="img-fluid mb-3 section-image float-left"
           />
         </div>
@@ -219,10 +219,11 @@
       </div>
     </div>
 
+    <!-- Turkish president -->
     <div style="overflow: auto">
       <img
         src="images/TurkeyPresident.jpg"
-        alt="Challenges in Building Code Enforcement"
+        alt="Turkish president standing in front of ruins"
         style="float: left; margin-right: 20px; width: 900px"
       />
       <h2 style="font-size: 40px; font-weight: bold">President's Promise</h2>
@@ -240,6 +241,7 @@
       <div style="clear: both"></div>
     </div>
 
+    <!-- Environmtal challenges -->
     <div class="container mt-4">
       <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
         Balancing Act: The Environmental Challenges of Rapid Reconstruction Efforts
@@ -254,7 +256,7 @@
         <div class="col-md-6 text-center">
           <img
             src="images/RemovingDebris.jpg"
-            alt="Diagram of Steel-Reinforced Concrete"
+            alt="Crew removing debris from a building"
             class="img-fluid mb-3 mx-auto d-block"
           />
           <p><strong> Workers removing debris</strong></p>
