--- a/policies.html
+++ b/policies.html
@@ -160,7 +160,7 @@
       </div>
     </div>
 
-    <!-- Construction Practices and Building Codes Section -->
+    <!-- Case study -->
     <div class="container mt-4 unique-section">
       <div class="row">
         <div class="col-md-6 mb-3">
@@ -204,6 +204,7 @@
       </div>
     </div>
 
+    <!-- Building Code Enforement -->
     <div style="overflow: auto">
       <img
         src="images/SafetyPic.jpg"
@@ -225,7 +226,8 @@
       </p>
       <div style="clear: both"></div>
     </div>
-
+    
+    <!-- Engineering Solutions -->
     <div class="container mt-4">
       <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
         Engineering Innovations: Seismic Isolation Devices and Dampers
