--- a/home.html
+++ b/home.html
@@ -154,7 +154,7 @@
             <img
               src="images/turkishCulture.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Guy and girl in turkish clothes in turkey with food and hookah"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Culture</h5>
@@ -170,7 +170,7 @@
             <img
               src="images/turkishMosque.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="A mosque in Istanbul"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Religion</h5>
@@ -186,7 +186,7 @@
             <img
               src="images/TurkishTourists.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Tourist in Turkey"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Tourism</h5>
@@ -198,7 +198,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/TurkishFood.jpg" class="d-block w-100" alt="..." />
+            <img src="images/TurkishFood.jpg" class="d-block w-100" alt="Turkish Coffee being poured" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Culinary</h5>
               <p>
@@ -212,7 +212,7 @@
             <img
               src="images/TurkishCastle.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Castle in Turkey"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>History</h5>
@@ -250,6 +250,7 @@
     <br />
     <br />
 
+    <!-- Map of the earthquake and why do earthquakes happen -->
     <div id="overview">
       <div class="overview-flex">
         <div>
