--- a/unpage.html
+++ b/unpage.html
@@ -87,21 +87,21 @@
                 <img
                   src="images/PolicyImg1.jpg"
                   class="d-block w-100"
-                  alt="Ruins of a building post-earthquake"
+                  alt="UN sustainability goal 11"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="images/PolicyImg2.jpg"
                   class="d-block w-100"
-                  alt="Description of your second image"
+                  alt="UN sustainability goal 11"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="images/PolicyImg3.PNG"
                   class="d-block w-100"
-                  alt="Description of your third image"
+                  alt="UN sustainability goal 11"
                 />
               </div>
             </div>
@@ -137,16 +137,117 @@
           <p>
             As global urban populations continue to rise, the challenges
             associated with creating livable, sustainable, and resilient cities
-            come into focus. United Nations Sustainable Development Goal
-            11 (SDG 11) aims to ensure that cities and human settlements are
-            inclusive, safe, resilient, and sustainable. The recent earthquakes
-            in Turkey have underscored the dire consequences of non-compliance
-            with building safety regulations, showing off the critical need for
+            come into focus. United Nations Sustainable Development Goal 11 (SDG
+            11) aims to ensure that cities and human settlements are inclusive,
+            safe, resilient, and sustainable. The recent earthquakes in Turkey
+            have underscored the dire consequences of non-compliance with
+            building safety regulations, showing off the critical need for
             through urban planning and infrastructure development. This section
             outlines the importance of aligning urban development strategies
             with SDG 11 to mitigate the impacts of such disasters and to foster
             sustainable growth in urban environments.
           </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Construction Practices and Building Codes Section -->
+    <div class="container mt-4 unique-section">
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <h2 class="section-title" style="font-weight: bold">
+            Exploring the Core Objectives of SDG 11
+          </h2>
+          <p class="section-text" style="font-size: 21px">
+            United Nations Sustainable Development Goal 11 is dedicated to
+            making cities and human settlements inclusive, safe, resilient, and
+            sustainable. Central to this goal is the provision of safe and
+            affordable transportation, ensuring accessibility for all,
+            particularly vulnerable groups such as the elderly, children, and
+            those with disabilities. It also focuses on the necessity of
+            providing adequate, safe, and affordable housing, alongside efforts
+            to upgrade slums into more livable and dignified environments.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/nations2.jpg"
+            alt="Flags outside the united nations"
+            class="img-fluid mb-3 section-image float-right"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/Nations.jpg"
+            alt="Inside the chamber in the United nations"
+            class="img-fluid mb-3 section-image float-left"
+          />
+        </div>
+        <div class="col-md-6">
+          <p class="section-text" style="font-size: 21px">
+            The environmental aspects of SDG 11 are underscored by initiatives
+            aimed at improving waste management and air quality, contributing to
+            the sustainability of urban areas. Moreover, resilience building is
+            a key component, preparing cities to better withstand and recover
+            from natural disasters. By integrating these objectives, SDG 11
+            seeks to foster urban areas that are not only capable of surviving
+            future challenges but are also thriving, safe, and sustainable
+            environments for all residents.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div style="overflow: auto">
+      <img
+        src="images/Urban.jpg"
+        alt="advanced highway system"
+        style="float: left; margin-right: 20px; width: 900px"
+      />
+      <h2 style="font-size: 40px; font-weight: bold">
+        Actionable Strategies for Sustainable Urban Development
+      </h2>
+      <p style="font-size: 25px">
+        Affordable housing, green space creation, public transportation
+        investment, and comprehensive urban planning are some of the ways to
+        support sustainable urban development. It is imperative to involve local
+        communities in projects to make sure they meet their needs. The
+        provision of emergency shelter, search and rescue operations, and
+        humanitarian relief were the main priorities of the initial response to
+        the earthquake in Turkey. Rebuilding infrastructure with resilience in
+        mind would be given top priority in long-term strategies, which would
+        also include improving urban planning laws, retrofitting existing
+        buildings, and bolstering disaster preparedness. By taking these steps,
+        we hope to create inclusive, safe, and environmentally sustainable
+        cities that can withstand any obstacles in the future.
+      </p>
+      <div style="clear: both"></div>
+    </div>
+
+    <div class="container mt-4">
+      <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
+        Towards Resilient and Sustainable Urban Futures
+      </h2>
+      <p style="font-size: 25px">
+        As we look towards building the cities of the future, the principles of
+        SDG 11 provide a framework for ensuring that urban environments
+        are not only survivable in times of crisis but thrive in terms of
+        inclusivity, sustainability, and resilience. By embracing the strategies
+        outlined in the earlier sections, urban planners, policymakers, and
+        communities can work together to transform urban landscapes into models
+        of sustainable development. This collaborative approach is essential for
+        achieving the goals of SDG 11.
+      </p>
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+          <img
+            src="images/Urban2.jpg"
+            alt="Example of a urban developed city"
+            class="img-fluid mb-3 mx-auto d-block"
+          />
+          <p><strong>Urban City</strong></p>
         </div>
       </div>
     </div>
