Changed Nav bar
Changed the nav bar and fixed some styling consistencies

--- a/about.html
+++ b/about.html
@@ -27,28 +27,37 @@
   </head>
   <body>
     <!-- Nav bar -->
-    <ul class="nav nav-pills nav-justified">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="about.html"
-          >About</a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="impact.html">Impact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="policies.html">Policies</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="education.html">Education</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="unpage.html">UN Sustainability</a>
-      </li>
-    </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="home.html">Turkey Earthquake</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAbout" aria-controls="navbarNavAbout" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAbout">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="impact.html">Impact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="policies.html">Policies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="education.html">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="unpage.html">UN Sustainability</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
 
     <!-- Hero div -->
     <div class="hero vh-100 d-flex align-items-center">
@@ -58,7 +67,7 @@
             <h1 class="display-4 text-white">
               Unveiling the Impact: The 2023 Turkey Earthquake
             </h1>
-            <p class="text-white my-3" style="font-size: 22px">
+            <p class="text-white my-3" style="font-size: 21px">
               Dive into an in-depth analysis of how the 2023 earthquake has
               reshaped lives and landscapes, revealing the immense human,
               economic, and environmental toll. Discover stories of resilience
@@ -143,8 +152,7 @@
           <p>
             On February 6, 2023, Turkey was hit by a devastating earthquake that
             not only shook the nation but also captured global attention due to
-            its severe impacts and tragic aftermath. This disaster,
-            characterized by its high magnitude and deep geological impact,
+            its severe impacts and tragic aftermath. This disaster
             claimed thousands of lives and caused extensive damage to
             infrastructure, homes, and historical sites across several regions.
           </p>
@@ -168,7 +176,7 @@
           <h2 class="section-title" style="font-size: 35px; font-weight: bold">
             Construction Practices and Historical Building Codes
           </h2>
-          <p class="section-text" style="font-size: 25px">
+          <p class="section-text" style="font-size: 21px">
             In Turkey, particularly for buildings exceeding three stories, a
             common construction method involves reinforced concrete frameworks,
             as noted by Stewart, an expert in earthquake engineering.
@@ -197,13 +205,13 @@
           />
         </div>
         <div class="col-md-6">
-          <p class="section-text" style="font-size: 25px">
+          <p class="section-text" style="font-size: 21px">
             Post the devastating 1999 earthquake near Izmit, Turkey
             significantly revised its building codes to enhance seismic
-            resilience. These regulations are robust, yet many existing
-            structures predate these standards. The enforcement of these updated
-            codes has faced challenges, exacerbated by rapid urban development
-            and occasional lapses in regulatory oversight, leading to
+            resilience. These regulations are vigorous, yet many existing
+            structures were made before these standards. The enforcement of these updated
+            codes has faced challenges, increased by rapid urban development
+            and occasional short comings in regulatory oversight, leading to
             inconsistencies in building safety.
           </p>
         </div>
@@ -220,7 +228,7 @@
       <h2 style="font-size: 40px; font-weight: bold">
         Building Code Enforcement and Its Challenges
       </h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         Although Turkey strengthened its building codes following the
         devastating 1999 Istanbul earthquake, experts argue that poor
         enforcement and inadequate planning have worsened the effects of
@@ -228,14 +236,14 @@
         codes were enacted, were not sufficiently upgraded or maintained to
         withstand significant seismic activity.
       </p>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         The use of substandard building materials and the lack of proper
         inspections during construction booms have been significant factors.
-        These lapses in enforcement and oversight have resulted in structures
-        that fail to meet safety standards, thereby intensifying the damage and
+        These short comings in enforcement and oversight have resulted in structures
+        that fail to meet safety standards, intensifying the damage and
         increasing the risk to human life during earthquakes.
       </p>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         Addressing these challenges requires a concerted effort to not only
         update building codes but also to ensure strict compliance through
         regular inspections and penalties for non-compliance. Improving the
@@ -250,7 +258,7 @@
       <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
         Innovative Construction Techniques for Earthquake Resistance
       </h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         Modern construction technologies designed for earthquake resistance
         provide significant benefits by protecting structures from severe damage
         and reducing repair costs. Two of the best and most effective techniques
