--- a/education.html
+++ b/education.html
@@ -27,28 +27,37 @@
   </head>
   <body>
     <!-- Nav bar -->
-    <ul class="nav nav-pills nav-justified">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="impact.html">Impact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="policies.html">Policies</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="education.html"
-          >Education</a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="unpage.html">UN Sustainability</a>
-      </li>
-    </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="home.html">Turkey Earthquake</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavEducation" aria-controls="navbarNavEducation" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavEducation">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="impact.html">Impact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="policies.html">Policies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="education.html">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="unpage.html">UN Sustainability</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
 
     <!-- Hero div -->
     <div class="hero vh-100 d-flex align-items-center">
@@ -174,7 +183,7 @@
             seek certified first aid training programs available through local
             health services, community centers, or recognized organizations like
             the Red Cross. These programs teach life-saving skills that are
-            indispensable in emergencies.
+            extremely valuable in emergencies.
           </p>
         </div>
         <div class="col-md-6">
@@ -196,7 +205,7 @@
         <div class="col-md-6">
           <p class="section-text" style="font-size: 21px">
             Create a detailed family emergency plan that includes an
-            out-of-state contact, designated meeting places, and a well-stocked
+            out-of-state contact (if possible), designated meeting places, and a well-stocked
             supply kit with essentials like food, water, and medical supplies.
             Ensure that every family member understands the plan and knows what
             to do in various emergency scenarios.
@@ -215,7 +224,7 @@
       <h2 style="font-size: 40px; font-weight: bold">
         Securing Your Home: Essential Safety Measures
       </h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         To safeguard your family and home against disasters, it's essential to
         implement safety measures. Secure heavy furniture and appliances
         with straps and anchors to prevent tipping during disturbances, and
@@ -224,7 +233,7 @@
         cabinet latches to keep contents in place during shaking. These
         proactive steps not only minimize the risk of injury and property damage
         but also fortify your living environment against emergencies, providing
-        peace of mind.
+        peace of mind if anything were to happen.
       </p>
       <div style="clear: both"></div>
     </div>
@@ -234,7 +243,7 @@
       <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
         Take Action: Prepare, Practice, Protect
       </h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         True disaster preparedness goes beyond personal readiness; it involves a
         communal effort to build a safe and resilient society. We encourage
         everyone to not only follow the guidelines discussed but also to become
