--- a/impact.html
+++ b/impact.html
@@ -27,28 +27,37 @@
   </head>
   <body>
     <!-- Nav bar -->
-    <ul class="nav nav-pills nav-justified">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="impact.html"
-          >Impact</a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="policies.html">Policies</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="education.html">Education</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="unpage.html">UN Sustainability</a>
-      </li>
-    </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="home.html">Turkey Earthquake</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavImpact" aria-controls="navbarNavImpact" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavImpact">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="impact.html">Impact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="policies.html">Policies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="education.html">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="unpage.html">UN Sustainability</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
 
     <!-- Hero div -->
     <div class="hero vh-100 d-flex align-items-center">
@@ -58,7 +67,7 @@
             <h1 class="display-4 text-white">
               The Devastating Impact of the 2023 Turkey Earthquake
             </h1>
-            <p class="text-white my-3" style="font-size: 22px">
+            <p class="text-white my-3" style="font-size: 21px">
               Continue reading to explore why the devastating 2023 earthquake in
               Turkey resulted in numerous casualties and incurred billions in
               damages, many of which could have been mitigated with better
@@ -152,10 +161,10 @@
             confusion as emergency services scrambled to respond amidst the
             widespread devastation. With many areas rendered inaccessible due to
             debris and damaged infrastructure, the race against time to rescue
-            trapped survivors was fraught with difficulties. The community's
+            trapped survivors was full with difficulties. The community's
             resilience was tested as thousands of volunteers joined professional
             rescue teams, braving aftershocks and harsh conditions to search for
-            signs of life beneath the rubble. This collective effort underscored
+            signs of life beneath the rubble. This collective effort showed off
             the spirit of unity and the critical importance of timely and
             coordinated disaster response strategies.
           </p>
@@ -227,7 +236,7 @@
         style="float: left; margin-right: 20px; width: 900px"
       />
       <h2 style="font-size: 40px; font-weight: bold">President's Promise</h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         Recep Tayyip Erdoğan, the current president of Turkey since 2014,
         promised to “rebuild these buildings within one year and will hand them
         back to citizens.” He vowed to construct 650,000 new homes with 319,000
@@ -246,7 +255,7 @@
       <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
         Balancing Act: The Environmental Challenges of Rapid Reconstruction Efforts
       </h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         Reconstruction efforts that are this rapid can pose many risks such as
         increased carbon emissions, poor air quality, loss of biodiversity,
         inefficient land use, increased use of energy, and limited access to
