--- a/policies.html
+++ b/policies.html
@@ -27,28 +27,37 @@
   </head>
   <body>
     <!-- Nav bar -->
-    <ul class="nav nav-pills nav-justified">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="impact.html">Impact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="policies.html"
-          >Policies</a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="education.html">Education</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="unpage.html">UN Sustainability</a>
-      </li>
-    </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="home.html">Turkey Earthquake</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavPolicies" aria-controls="navbarNavPolicies" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavPolicies">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="impact.html">Impact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="policies.html">Policies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="education.html">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="unpage.html">UN Sustainability</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
 
     <!-- Hero div -->
     <div class="hero vh-100 d-flex align-items-center">
@@ -167,7 +176,7 @@
           <h2 class="section-title" style="font-size: 35px; font-weight: bold">
             Case Study: Adana City Hospital's Seismic Resilience
           </h2>
-          <p style="font-size: 22px">
+          <p style="font-size: 21px">
             Amidst the devastation of the 2023 earthquakes in Turkey, Adana City
             Hospital showed off the potential of modern seismic engineering. The
             hospital's advanced seismic isolation systems effectively absorbed
@@ -193,7 +202,7 @@
           />
         </div>
         <div class="col-md-6">
-          <p style="font-size: 22px">
+          <p style="font-size: 21px">
             This operational continuity is critical in disaster situations,
             where medical facilities are most needed. The success of Adana City
             Hospital underscores the importance of investing in seismic
@@ -212,7 +221,7 @@
         style="float: left; margin-right: 20px; width: 900px"
       />
       <h2 style="font-size: 40px; font-weight: bold">The Critical Role of Compliance in Building Safety</h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         Compliance with safety standards is not merely a regulatory requirement
         but a critical measure that significantly impacts the resilience of
         buildings during earthquakes. The 2023 earthquakes in Turkey highlighted
@@ -232,7 +241,7 @@
       <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
         Engineering Innovations: Seismic Isolation Devices and Dampers
       </h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         Seismic isolation devices and dampers represent transformative
         innovations in earthquake engineering, designed to enhance the safety
         and integrity of buildings during seismic events. These systems function
