--- a/unpage.html
+++ b/unpage.html
@@ -27,28 +27,37 @@
   </head>
   <body>
     <!-- Nav bar -->
-    <ul class="nav nav-pills nav-justified">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="impact.html">Impact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="policies.html">Policies</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="education.html">Education</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="unpage.html"
-          >UN Sustainability</a
-        >
-      </li>
-    </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="home.html">Turkey Earthquake</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavEducation" aria-controls="navbarNavEducation" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavEducation">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="impact.html">Impact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="policies.html">Policies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="education.html">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="unpage.htm">UN Sustainability</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
 
     <!-- Hero div -->
     <div class="hero vh-100 d-flex align-items-center">
@@ -58,7 +67,7 @@
             <h1 class="display-4 text-white">
               Shaping Resilient Cities: Aligning with SDG 11
             </h1>
-            <p class="text-white my-3" style="font-size: 22px">
+            <p class="text-white my-3" style="font-size: 21px">
               Explore how the pursuit of Sustainable Development Goal 11 is
               transforming urban areas into resilient, inclusive, and
               sustainable environments. Learn about the crucial role of
@@ -140,7 +149,7 @@
             come into focus. United Nations Sustainable Development Goal 11 (SDG
             11) aims to ensure that cities and human settlements are inclusive,
             safe, resilient, and sustainable. The recent earthquakes in Turkey
-            have underscored the dire consequences of non-compliance with
+            have showed off the extreme consequences of non-compliance with
             building safety regulations, showing off the critical need for
             through urban planning and infrastructure development. This section
             outlines the importance of aligning urban development strategies
@@ -209,17 +218,17 @@
       <h2 style="font-size: 40px; font-weight: bold">
         Actionable Strategies for Sustainable Urban Development
       </h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         Affordable housing, green space creation, public transportation
         investment, and comprehensive urban planning are some of the ways to
-        support sustainable urban development. It is imperative to involve local
+        support sustainable urban development. It is important to involve local
         communities in projects to make sure they meet their needs. The
         provision of emergency shelter, search and rescue operations, and
         humanitarian relief were the main priorities of the initial response to
         the earthquake in Turkey. Rebuilding infrastructure with resilience in
         mind would be given top priority in long-term strategies, which would
         also include improving urban planning laws, retrofitting existing
-        buildings, and bolstering disaster preparedness. By taking these steps,
+        buildings, and increasing disaster preparedness. By taking these steps,
         we hope to create inclusive, safe, and environmentally sustainable
         cities that can withstand any obstacles in the future.
       </p>
@@ -230,7 +239,7 @@
       <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
         Towards Resilient and Sustainable Urban Futures
       </h2>
-      <p style="font-size: 25px">
+      <p style="font-size: 21px">
         As we look towards building the cities of the future, the principles of
         SDG 11 provide a framework for ensuring that urban environments
         are not only survivable in times of crisis but thrive in terms of
