--- a/home.html
+++ b/home.html
@@ -27,27 +27,37 @@
   </head>
   <body>
     <!-- Nav bar -->
-    <ul class="nav nav-pills nav-justified">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="impact.html">Impact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="policies.html">Policies</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="education.html">Education</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="unpage.html">UN Sustainability</a>
-      </li>
-    </ul>
-
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="home.html">Turkey Earthquake</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavHome" aria-controls="navbarNavHome" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavHome">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="impact.html">Impact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="policies.html">Policies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="education.html">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="unpage.html">UN Sustainability</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
     <!-- Hero div -->
     <div class="hero vh-100 d-flex align-items-center">
       <div class="container">
@@ -175,7 +185,7 @@
             <div class="carousel-caption d-none d-md-block">
               <h5>Religion</h5>
               <p>
-                Turkey's historical religious landscape showcases its role as a
+                Turkey's historical religious landscape shows its role as a
                 crossroads of faiths. Iconic Istanbul structures like the Hagia
                 Sophia and the Blue Mosque, along with its title as the "land of
                 thousands of mosques," highlight its deep Islamic heritage.
@@ -220,7 +230,7 @@
                 Turkey's historical depth is marked by its role as a starting
                 place for major civilizations. It has been home to the Hittites,
                 Phrygians, Urartians, Greeks, Romans, Byzantines, and Ottomans,
-                each enriching its diverse historical past.
+                each furthering its diverse historical past.
               </p>
             </div>
           </div>
@@ -263,7 +273,7 @@
         </div>
         <div class="overview-text">
           <h1>At a Quick Glance</h1>
-          <p>
+          <p style="font-size: 22px;">
             With a magnitude of 7.8 and 7.5, two earthquakes hit Turkey and
             parts of Syria on February 6, 2023. It killed over 50,000 people and
             damaged hundreds of thousands of buildings. This displaced millions
@@ -308,7 +318,7 @@
                   Earthquakes happen when the Earth's surface shakes due to
                   movements deep underground. These movements come from the
                   edges of large pieces of the Earth's outer shell, which fit
-                  together like a giant jigsaw puzzle but are always slowly
+                  together like a giant puzzle but are always slowly
                   moving.
                 </div>
               </div>
